# LearningAndCourses

DIscreteOptimization/Knapsack/: Solver  Solver.cpp
NeuralNetworks/: CMakeCache.txt  CMakeLists.txt  Makefile  OpenANN  README,md  README.md  aocc_run.sh  clang_run.sh  gcc_run.sh  run.sh
NeuralNetworks/Archive/: Gradient.cpp  InputLayer.h  Layer.cpp  Layer.h  Neuron.cpp  Neuron.h  OutputLayer.h  run.sh
NeuralNetworks/include/: Layer.h  Matrix.h  NeuralNetwork.h  Neuron.h
NeuralNetworks/src/: Layer.cpp  Matrix.cpp  NeuralNetwork.cpp  Neuron.cpp  main.cpp
ProductionOpenANN/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  leakscheck.sh  perf.sh  run.sh
ProductionOpenANN/config/: training.json
ProductionOpenANN/data/training/: sample_data.csv
ProductionOpenANN/include/: Layer.h  Matrix.h  NeuralNetwork.h  Neuron.h
ProductionOpenANN/include/utils/: DataManager.h  Math.h
ProductionOpenANN/insights/plotting/: plotErrorEvolution.py
ProductionOpenANN/logs/perflogs/: PerfLog.data  PerfLog.data.old  log0.data
ProductionOpenANN/src/: Backpropagation.cpp  FeedForward.cpp  Layer.cpp  Matrix.cpp  NeuralNetwork.cpp  Neuron.cpp  SetErrorsForNetwork.cpp  TrainNetwork.cpp  driver.cpp
ProductionOpenANN/src/utils/: DataManager.cpp  Math.cpp
StanfordCS221/: OptimizedDpSearch  Search.cpp
UCSD_DSA/: Template.cpp
UCSD_DSA/AlgorithmicToolbox/: git_sync.sh
UCSD_DSA/GraphAlgorithms/: test  test.cpp
computer-vision/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  run  run.sh
computer-vision/cpp/: CMakeCache.txt  CMakeLists.txt  (+3 more)
(+30 files in other folders)
